# argus-truth-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  HANDOFF.md  PITCH.md  README.md  README.zh.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
.claude/: launch.json
.githooks/: pre-push
.github/workflows/: ci.yml
docs/smoke-test-logs/: 2026-05-26-console.txt  2026-05-26-output.json
examples/: README.md
scripts/: build_fixture_pdf.py  check_type_parity.py  smoke_test.py
src/argus/: __main__.py  cli.py  config.py  engineering.py  hitl.py  log.py  orchestrator.py
src/argus/agents/: __init__.py  atomizer.py  base.py  challenger.py  checkworthiness.py  citation_alignment.py  citation_verifier.py  confidence_calculator.py  consistency.py  data_freshness.py  domain_hints.py  evidence_hunter.py  planner.py  reporter.py  skeptic.py  unified_verifier.py
src/argus/api/: __init__.py  access.py  account.py  app.py  auth.py  deps.py  events.py  job_progress.py  job_query.py  jobs.py  runner.py  share.py  ws.py
src/argus/cache/: __init__.py  finding_cache.py  key.py
src/argus/db/: __init__.py  models.py  repository.py  session.py
src/argus/llm/: cheap_client.py
src/argus/miromind/: __init__.py  client.py  sse.py
src/argus/models/: __init__.py  domain.py  miromind.py
src/argus/orchestrator/: __init__.py  _legacy.py  assemblers.py  checkpointer.py  context.py  entry.py  (+1 more)
submission_package/: SUBMISSION_FIELDS.md
tests/: conftest.py  test_agents_base.py  test_api_app.py  test_api_auth.py  test_api_jobs.py  test_api_pdf_report.py  test_api_ws.py  test_citation_alignment.py  test_citation_verifier.py  test_cli.py  test_cli_serve.py  test_confidence_sourcing.py  test_consistency.py  test_data_freshness.py  test_db_models.py  test_db_repository.py  test_db_session.py  test_domain_hints.py  test_engineering.py  test_helpers.py  test_miromind_client.py  test_miromind_retry.py  test_miromind_sse.py  test_models_domain.py  test_models_miromind.py  test_orchestrator_all_agents.py  test_orchestrator_e2e.py  test_orchestrator_langgraph.py  test_orchestrator_trace_bus.py  test_orchestrator_with_db.py  test_pdf_parser.py  test_pipeline_dryrun.py  test_pipeline_finalize.py  test_planner.py  test_reporter.py  test_reporting_pdf.py  test_review_gate_cap.py  test_skeptic_pass.py  test_storage_local_fs.py  test_trace_bus_in_process.py  (+2 more)
tests/_helpers/: mock_miromind.py
tests/integration/: test_cache_hit_evidence.py  test_cache_roundtrip.py  test_concurrent_verification.py  test_hitl_interrupt.py  test_resume.py
tests/unit/: test_assemblers.py  test_cache_key.py  test_miromind_client.py  test_token_bucket.py
web/: CLAUDE.md  README.md  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: api-key-input.tsx  argus-header.tsx  argus-mark.tsx  auth-button.tsx  benchmark-disclosure.tsx  claim-review-panel.tsx  confidence-breakdown.tsx  cost-chip.tsx  dag-tab.tsx  demo-run-controls.tsx  demo-video-nav-link.tsx  evidence-tab.tsx  export-menu.tsx  finding-card.tsx  findings-tab.tsx  hero-product-mock.tsx  highlight-overlay.tsx  icons.tsx  job-stats-bar.tsx  live-reasoning-panel.tsx  marketing-ctas.tsx  pdf-upload-dropzone.tsx  pdf-viewer.tsx  persona-section.tsx  reasoning-chain.tsx  reasoning-panel.tsx  reasoning-walkthrough-cta.tsx  scenario-banner.tsx  severity-badge.tsx  shortcuts-hint.tsx  technical-depth-panel.tsx  text-viewer.tsx  theme-toggle.tsx  trace-stream-view.tsx  trace-typewriter.tsx
web/lib/: account.ts  api.ts  audit-fingerprint.ts  audit-pack.ts  auditability.ts  benchmark-evaluation.ts  colors.ts  demo-replay.ts  execution-controls.ts  findings.ts  format.ts  load-job.ts  steps.ts  store.ts  technical-depth.ts  trace-replayer.ts  trace-ws.ts  types.ts  url.ts  use-auth-session.ts  use-count-up.ts  use-keyboard-nav.ts  use-scroll-reveal.ts
web/public/: sample-findings-legal.json  sample-findings.json
web/tests/: setup.ts
(+102 files in other folders)
