[project]
name = "argus"
version = "0.0.1"
description = "Audit tool for buy-side investment analysts — research report truth engine."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "aiofiles>=24.1",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "greenlet>=3.0",
    "httpx>=0.28",
    "httpx-sse>=0.4",
    "langgraph>=0.2",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "redis[hiredis]>=5.0",
    "sqlalchemy>=2.0",
    "structlog>=24.1",
    "tenacity>=8.5",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "rich>=13.7",
]

[project.scripts]
argus = "argus.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-aiofiles>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]  # too many args — fine for Pydantic models

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=argus --cov-report=term-missing --cov-fail-under=0"
